--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,4 @@ __pycache__/
 
 *.mat
 *.dat
-01Data_PreProcess/Data_RawCSIDat/*
-04Segment_StateInference/saveModel/*
-04Segment_StateInference/*ema
+01Data_PreProcess/Data_RawCSIDat/*/
